--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "slick-carousel": "^1.8.1"
+        "slick-carousel": "^1.8.1",
+        "swiper": "^11.2.5"
     }
 }
