--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "alpinejs": "^3.14.8",
         "slick-carousel": "^1.8.1",
         "swiper": "^11.2.5"
     }
